Update Ansible inventory and playbook

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,18 +2,19 @@
 win_honeypot ansible_host=192.168.100.3
 
 [honeypot:vars]
-ansible_user=ansible
-ansible_password=Azerty11
 ansible_connection=winrm
 ansible_port=5985
+ansible_user=Administrateur
+ansible_password=Aze;rty11
 ansible_winrm_transport=basic
 ansible_winrm_server_cert_validation=ignore
 ansible_become=false
 
 [sensor]
-linux_sensor ansible_host=192.168.100.10
+linux_sensor ansible_host=192.168.100.67
 
 [sensor:vars]
-ansible_user=root
 ansible_connection=ssh
+ansible_user=ansible
+ansible_ssh_private_key_file=/home/kali/.ssh/id_ed25519_honeysensor
 ansible_become=true
