--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,11 +1,122 @@
 ---
-- hosts: sensor
-  gather_facts: yes
-  become: yes
-  roles:
-    - honeypot
-
 - hosts: honeypot
-  gather_facts: yes
-  roles:
-    - honeypot
+  gather_facts: no
+  tasks:
+    - name: Enable RDP via registry
+      win_regedit:
+        path: HKLM:\System\CurrentControlSet\Control\Terminal Server
+        name: fDenyTSConnections
+        data: 0
+        type: dword
+
+    - name: Configure WinRM for basic auth
+      win_shell: |
+        winrm quickconfig -force
+        winrm set winrm/config/service @{AllowUnencrypted="true"}
+        winrm set winrm/config/service/auth @{Basic="true"}
+
+    - name: Allow RDP in firewall
+      win_firewall_rule:
+        name: RDP-In
+        localport: 3389
+        action: allow
+        direction: in
+        protocol: tcp
+        state: present
+
+    - name: Allow WinRM in firewall
+      win_firewall_rule:
+        name: WinRM-In
+        localport: 5985
+        action: allow
+        direction: in
+        protocol: tcp
+        state: present
+
+    - name: Ensure Git is installed
+      win_chocolatey:
+        name: git
+        state: present
+
+    - name: Clone HoneyRDP repository
+      win_git:
+        repo: https://github.com/user/HoneyRDP.git
+        dest: C:\HoneyRDP
+        force: yes
+
+    - name: Copy PowerShell scripts
+      win_copy:
+        src: "{{ playbook_dir }}/../scripts/"
+        dest: C:\HoneyRDP\scripts
+
+    - name: Schedule SessionRecorder task
+      win_shell: >-
+        schtasks /Create /TN SessionRecorder
+        /TR "powershell.exe -ExecutionPolicy Bypass -File C:\HoneyRDP\scripts\session_recorder.ps1"
+        /SC ONLOGON /RL HIGHEST /F
+
+- hosts: sensor
+  gather_facts: no
+  become: yes
+  tasks:
+    - name: Activate promiscuous mode on ens18
+      command: ip link set ens18 promisc on
+      args:
+        warn: false
+
+    - name: Configure static IP on ens192
+      copy:
+        dest: /etc/network/interfaces.d/ens192.cfg
+        content: |
+          auto ens192
+          iface ens192 inet static
+              address 192.168.100.67/24
+
+    - name: Install required packages
+      apt:
+        name:
+          - openssh-server
+          - git
+          - docker.io
+          - docker-compose
+        state: present
+        update_cache: yes
+
+    - name: Ensure ansible user exists
+      user:
+        name: ansible
+        groups: sudo
+        shell: /bin/bash
+        state: present
+
+    - name: Deploy SSH key for ansible user
+      authorized_key:
+        user: ansible
+        key: "{{ lookup('file', '/home/kali/.ssh/id_ed25519_honeysensor.pub') }}"
+        state: present
+
+    - name: Ensure /opt/honeypot directory exists
+      file:
+        path: /opt/honeypot
+        state: directory
+
+    - name: Copy docker-compose.yml
+      copy:
+        src: "{{ playbook_dir }}/../docker-compose.yml"
+        dest: /opt/honeypot/docker-compose.yml
+
+    - name: Copy suricata configuration
+      copy:
+        src: "{{ playbook_dir }}/../suricata/"
+        dest: /opt/honeypot/suricata
+        mode: '0644'
+
+    - name: Copy filebeat configuration
+      copy:
+        src: "{{ playbook_dir }}/../filebeat.yml"
+        dest: /opt/honeypot/filebeat.yml
+
+    - name: Start Suricata and Filebeat containers
+      command: docker-compose up -d
+      args:
+        chdir: /opt/honeypot
