--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -5,7 +5,7 @@ win_honeypot ansible_host=192.168.100.3
 ansible_connection=winrm
 ansible_port=5985
 ansible_user=Administrateur
-ansible_password=Aze;rty11
+ansible_password=Azerty11
 ansible_winrm_transport=basic
 ansible_winrm_server_cert_validation=ignore
 ansible_become=false
