--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -4,11 +4,10 @@ win_honeypot ansible_host=192.168.100.3
 [honeypot:vars]
 ansible_connection=winrm
 ansible_port=5985
-ansible_user=Administrateur
-ansible_password=Azerty11
+ansible_user=rdpuser
+ansible_password=YOUR_PASSWORD
 ansible_winrm_transport=basic
 ansible_winrm_server_cert_validation=ignore
-ansible_become=false
 
 [sensor]
 linux_sensor ansible_host=192.168.100.67
